# EC_Finance

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: 00_IntroduccionAlCurso.ipynb  01_IntroduccionPython.ipynb  01a_IntroduccionPython.ipynb  01b_IntroduccionPython.ipynb  02_EstructurasPython.ipynb  03_ComputacionNumerica.ipynb  03a_ComputacionNumerica.ipynb  03b_ComputacionNumerica.ipynb  04_ManipulacionDatosPandas.ipynb  04a_ManipulacionDatosVisualizacion.ipynb  04b_ManipulacionDatosVisualizacion.ipynb  05_Visualizacion.ipynb  05a_SeriesdeTiempo.ipynb  06_SeriesdeTiempo.ipynb  07_MachineLearningRegression.ipynb  LabFinal_DerivativesPricing.ipynb  LabFinal_StockPricePrediction.ipynb  party.py
Notebooks/data/: ARIMA_ShampooDataset.pkl  MyUsers9999.txt  finalized_model.sav
